vlib/v/parser/tests/expr_evaluated_but_not_used_d.vv
fn main() {
    a := 1
    b := 2
    println(a*b), a+b
}
